src/components/Main.css
.main {
  padding: 36px;
  margin-top: 32px;
}

.main--input {
  display: grid;
  grid-template: 40px 40px / 1fr 1fr;
  gap: 17px;
}

.form--input {
  border: 1px solid #D5D4D8;
  border-radius: 5px;
  text-indent: 5px;
}

.button--input {
  grid-column: 1 / -1;
  border-radius: 5px;
  background: linear-gradient(.25turn, #672280, #A626D3);
  color: white;
  border: none;
  cursor: pointer;
}

.meme--image {
  width: 300px;
  height: 300px;
}

